--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sex-health-tma",
-  "version": "1.0.0",
+  "name": "sex-health-tma-v2",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,8 +10,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
+    "compression": "^1.7.4",
     "telegraf": "^4.16.3",
-    "compression": "^1.7.4"
+    "node-cron": "^3.0.3"
   }
 }
