--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
-{"name":"sex-health-tma-v4.4"}
+{
+  "name": "sex-health-tma-v5",
+  "version": "1.5.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "node bot/index.js",
+    "start": "node bot/index.js"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "compression": "^1.7.4",
+    "telegraf": "^4.16.3",
+    "node-cron": "^3.0.3"
+  }
+}
